# stmm-games

./: CHANGES  INSTALL  README.md
libstmm-games/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-games-defs.cmake  stmm-games.pc.in
libstmm-games-fake/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-games-fake-defs.cmake  stmm-games-fake.pc.in
libstmm-games-fake/doc/: CMakeLists.txt
libstmm-games-fake/scripts/: install_libstmm-games-fake.py  uninstall_libstmm-games-fake.py
libstmm-games-fake/src/: dumbblockevent.cc  fakelevelview.cc  fixtureDevices.cc  fixtureGame.cc  fixtureGameOwner.cc  fixtureLayoutAuto.cc  fixtureStdConfig.cc  fixtureStdPreferences.cc  fixtureTestBase.cc  fixturevariantHighscoresDefinition.cc  fixturevariantKeyActions.cc  fixturevariantLayout.cc  fixturevariantLevelInit.cc  fixturevariantOptions.cc  fixturevariantPlayers.cc  fixturevariantPrefsDevices.cc  fixturevariantPrefsPlayers.cc  fixturevariantTeams.cc  fixturevariantVariables.cc  mockevent.cc  stmm-games-fake-config.cc.in  stmm-games-fake.cc
libstmm-games-fake/test/: CMakeLists.txt
libstmm-games-file/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-games-file-defs.cmake  stmm-games-file.pc.in
libstmm-games-file/doc/: CMakeLists.txt
libstmm-games-file/scripts/: install_libstmm-games-file.py  uninstall_libstmm-games-file.py
libstmm-games-file/src/: allpreferences.cc  allpreferencesloader.cc  file.cc  gameconstraints.cc  gameloader.cc  highscoresloader.cc  stmm-games-file-config.cc.in
libstmm-games-file/test/: CMakeLists.txt  testGameConstraints.cxx
libstmm-games-gtk/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-games-gtk-defs.cmake  stmm-games-gtk.pc.in
libstmm-games-gtk/doc/: CMakeLists.txt
libstmm-games-gtk/scripts/: install_libstmm-games-gtk.py  uninstall_libstmm-games-gtk.py
libstmm-games-gtk/src/: boxthemewidgetfactory.cc  commontheme.cc  containermodifier.cc  gamegtkdrawingarea.cc  gamegtkdrawingarea.h  gamewindow.cc  gamewindow.h  levelshowthemewidget.cc  mainwindow.cc  stdlevelview.cc  stdlevelview.h  stdtheme.cc  stdthemeanimationfactories.cc  stdthemeanimationfactory.cc  stdthemecontext.cc  stdthemedrawingcontext.cc  stdthememodifier.cc  stdthemesound.cc  stdthemesound.h  stdthemewidgetfactories.cc  stdthemewidgetfactory.cc  stdview.cc  stdview.h  stdviewlayout.cc  stdviewlayout.h  stmm-games-gtk-config.cc.in  theme.cc  themeanimation.cc  themecontainerwidget.cc  themecontext.cc  themelayout.cc  themeloader.cc  themesound.cc  themewidget.cc  themewidgetinteractive.cc
libstmm-games-gtk/test/: CMakeLists.txt  testElapsedMapper.cxx  testSegmentedFunction.cxx
libstmm-games-xml-base/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-games-xml-base-defs.cmake  stmm-games-xml-base.pc.in
libstmm-games-xml-base/doc/: CMakeLists.txt
libstmm-games-xml-base/scripts/: install_libstmm-games-xml-base.py  uninstall_libstmm-games-xml-base.py
libstmm-games-xml-base/src/: conditionalctx.cc  parserctx.cc  stmm-games-xml-base-config.cc.in  xmlcommonerrors.cc  xmlcommonparser.cc  xmlconditionalparser.cc  xmltraitsparser.cc
libstmm-games-xml-base/test/: CMakeLists.txt  testXmlCommonParser.cxx
libstmm-games-xml-game/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-games-xml-game-defs.cmake  stmm-games-xml-game.pc.in
libstmm-games-xml-game/doc/: CMakeLists.txt
libstmm-games-xml-game/scripts/: install_libstmm-games-xml-game.py  uninstall_libstmm-games-xml-game.py
libstmm-games-xml-game/src/: gamectx.cc  gameinfoctx.cc  gameinitctx.cc  gameinitctx.h  layoutctx.cc  stmm-games-xml-game-config.cc.in  xmlblockparser.cc  xmlblockparser.h  xmleventparser.cc  xmlgamefiles.cc  xmlgameinfoparser.cc  xmlgameinfoparser.h  xmlgameinitparser.cc  xmlgameinitparser.h  xmlgameloader.cc  xmlgameparser.cc  xmlgameparser.h  xmlgamewidgetparser.cc  xmlhighscoresloader.cc  xmllayoutparser.cc  xmllayoutparser.h  xmlpreferencesloader.cc  xmlstdeventparsers.cc  xmlstdgamewidgetparsers.cc  xmlutilfile.cc  xmlutilfile.h
libstmm-games-xml-game/test/: CMakeLists.txt
libstmm-games-xml-gtk/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-games-xml-gtk-defs.cmake  stmm-games-xml-gtk.pc.in
libstmm-games-xml-gtk/doc/: CMakeLists.txt
libstmm-games-xml-gtk/doc-all/: README.md
libstmm-games-xml-gtk/scripts/: install_libstmm-games-xml-gtk.py  uninstall_libstmm-games-xml-gtk.py
libstmm-games-xml-gtk/src/: fontconfigloader.cc  fontconfigloader.h  gamediskfiles.cc  stmm-games-xml-gtk-config.cc.in  themectx.cc  themeextradata.cc  themeextradata.h  xmlmodifierparser.cc  xmlstdmodifierparsers.cc  xmlstdthanimationparsers.cc  xmlstdthwidgetparsers.cc  xmlthanimationfactoryparser.cc  xmlthemeaniparser.cc  xmlthemeaniparser.h  xmlthemeassignparser.cc  xmlthemeassignparser.h  xmlthemeimageparser.cc  xmlthemeimagesparser.cc  xmlthemeimagesparser.h  xmlthemeloader.cc  xmlthememodifiersparser.cc  xmlthememodifiersparser.h  xmlthemeparser.cc  xmlthemeparser.h  xmlthemesoundsparser.cc  xmlthemesoundsparser.h  xmlthemewidgetparser.cc  xmlthemewidgetparser.h  xmlthwidgetfactoryparser.cc  xmlutilfile.cc  xmlutilfile.h
libstmm-games-xml-gtk/test/: CMakeLists.txt
libstmm-games/doc/: CMakeLists.txt
libstmm-games/scripts/: install_libstmm-games.py  uninstall_libstmm-games.py
libstmm-games/src/: appconfig.cc  appconstraints.cc  apppreferences.cc  block.cc  containerwidget.cc  event.cc  game.cc  gameowner.cc  gameproxy.cc  gamesound.cc  gameview.cc  gamewidget.cc  gamewidgets.cc  highscore.cc  highscoresdefinition.cc  keyactionevent.cc  layout.cc  level.cc  levelanimation.cc  levelanimations.cc  levelblock.cc  levellisteners.cc  levelshow.cc  levelview.cc  named.cc  option.cc  ownertype.cc  prefselector.cc  private-listenerstk.cc  randomsource.cc  relsizedgamewidget.cc  stdconfig.cc  stdpreferences.cc  stdrandomsource.cc  stmm-games-config.cc.in  tile.cc  tileanimator.cc  traitset.cc  variable.cc
libstmm-games/test/: CMakeLists.txt  testAlarmsEvent.cxx  testAppConstraints.cxx  testArrayEvent.cxx  testBackgroundEvent.cxx  testBasicTypes.cxx  testBlock.cxx  testCircularBuffer.cxx  testCoords.cxx  testDirection.cxx  (+29 more)
(+568 files in other folders)
